[package]
name = "cnctd_db_macros"
version = "0.1.0"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "scaffolded by cnctd"
repository = "https://github.com/Connected-Dot/cnctd_db_macros"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.79"

[lib]
proc-macro = true
